--- a/.github/workflows/deploy_to_pages.yml
+++ b/.github/workflows/deploy_to_pages.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Instalas NodeJS
         uses: actions/setup-node@v4
-        width:
+        with:
           node-version: '20'
       - name: Instalar Dependencias
         run: npm install
@@ -38,7 +38,7 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Subir el compliado a Pages
         uses: actions/upload-pages-artifact@v3
-        width:
+        with:
           path: './dist'
       - name: Publicar el sitio
         id: deployment
